--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <center><a href="index.html">Home Page</a></center> <br>
   <table>
     <tr>
-      <td><img src="..\Images\apple.jpg" alt="Apple"></td>
+      <td><img src=".\Images\apple.jpg" alt="Apple"></td>
       <td>
         <h1>Brian Chan</h1>
         <p><em>Beginner in <strong>HTML and CSS</strong></em></p>
